Finish MVP of plugin